--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.placeholder_1 img {
+    width: 50%;
+}
+
 /* header */
 
 header {
@@ -9,4 +13,8 @@ header {
 
 .jumbotron {
     background-color: #1ABC9C;
+}
+
+.just_center {
+    justify-content: center;
 }
