--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,13 @@ header {
 .about {
     background-color: #1ABC9C;
 }
+
+/* footer */
+
+.top-footer {
+    background-color: #3A546D;
+}
+
+.bottom-footer {
+    background-color: #2C3E50;
+}
