--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-.placeholder_1{
-    width: 20%;
+html {
+    font-family: 'Montserrat', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 .txt_center {
@@ -16,13 +21,11 @@
     margin: 0 2px;
 }
 
-.menu-h {
-    display: none;
-}
 
 .square {
-    height: 100px;
-    background-color: red;
+        width: 100%;
+        height: 300px;
+        background-color: red;
 }
 
 /* header */
@@ -32,6 +35,19 @@ header {
     color: white;
 }
 
+header h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+header a {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+header .hamburger a {
+    font-size: 1.5em;
+}
 /* jumbotron */
 
 .jumbotron {
@@ -42,6 +58,26 @@ header {
     justify-content: center;
 }
 
+.jumbotron img {
+    width: 30%;
+}
+
+
+.jumbotron >* {
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.5em;
+}
+
+.jumbotron h3 {
+    font-size: 1.5em;
+}
+
+.bar_x::after,
+.bar_x:before {
+    content: "-";
+    margin: 0 3px;
+}
 /* about */
 .about {
     background-color: #1ABC9C;
@@ -59,7 +95,7 @@ header {
 
 /* media */
 
-@media screen and (max-width:767px) {
+/* @media screen and (max-width:767px) {
     header .container .row .col-md-1 {
         display: none;
     }
@@ -67,4 +103,4 @@ header {
     .menu-h {
         display: block;
     }
-}
+} */
