--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,39 @@ header .hamburger a {
     text-transform: uppercase;
 }
 
+.portfolio .alt_{
+    height: 200px;
+}
+
 .portfolio {
     font-size: 1.5em;
 }
 
+.portfolio .plus {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+    background-color: #1ABC9C;
+    border-radius: 10px;
+
+}
+
+.portfolio a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+}
+
 .portfolio img {
     width: 100%;
+    height: 100%;
+    border-radius: 10px;
     transition: 1.5s;
 }
 
