--- a/css/style.css
+++ b/css/style.css
@@ -84,16 +84,19 @@ header .hamburger :hover{
     width: 30%;
 }
 
+.jumbotron h2 {
+    font-size: 2em;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 
-.jumbotron >* {
+.jumbotron ul li {
     color: white;
     text-transform: uppercase;
     font-size: 1.5em;
 }
 
-.jumbotron h3 {
-    font-size: 1.5em;
-}
 
 .bar_x::after,
 .bar_x:before {
@@ -253,7 +256,7 @@ input.hasvalue + label {
         font-size: 1.1em;
     }
 
-    .jumbotron >* {
+    .jumbotron ul li {
         font-size: 1.1em;
     }
     
