--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ header .hamburger :hover{
     height: 100%;
     border-radius: 10px;
     transition: 1.5s;
+    object-fit: cover;
 }
 
 .portfolio img:hover {
