--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,10 @@ header .hamburger :hover{
 .portfolio .plus {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,7 +147,6 @@ header .hamburger :hover{
 
 .portfolio img {
     width: 100%;
-    height: 100%;
     border-radius: 10px;
     transition: 1.5s;
     object-fit: cover;
